# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-vcs/ChangeLog,v 1.188 2015/03/01 10:28:58 ulm Exp $

*emacs-vcs-25.0.50_pre20150228 (01 Mar 2015)

  01 Mar 2015; Ulrich Müller <ulm@gentoo.org>
  -emacs-vcs-25.0.50_pre20141110.ebuild, -emacs-vcs-25.0.50_pre20141231.ebuild,
  +emacs-vcs-25.0.50_pre20150228.ebuild:
  New snapshot of trunk. Remove old.

  28 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.4.90-r1.ebuild,
  emacs-vcs-25.0.50_pre20150131.ebuild, emacs-vcs-25.0.9999-r1.ebuild:
  Update version of emacs-common-gentoo dependency.

*emacs-vcs-24.4.90-r1 (21 Feb 2015)

  21 Feb 2015; Ulrich Müller <ulm@gentoo.org> -emacs-vcs-24.4.90.ebuild,
  +emacs-vcs-24.4.90-r1.ebuild, emacs-vcs-25.0.50_pre20150131.ebuild,
  emacs-vcs-25.0.9999-r1.ebuild:
  Follow QA policy for game state directory, bug 537580.

*emacs-vcs-24.4.90 (17 Feb 2015)

  17 Feb 2015; Ulrich Müller <ulm@gentoo.org> +emacs-vcs-24.4.90.ebuild:
  First pretest for Emacs 24.5.

  17 Feb 2015; Ulrich Müller <ulm@gentoo.org> emacs-vcs-24.4.9999-r2.ebuild,
  emacs-vcs-25.0.50_pre20141110.ebuild, -emacs-vcs-25.0.50_pre20141130.ebuild,
  emacs-vcs-25.0.50_pre20141231.ebuild, emacs-vcs-25.0.50_pre20150131.ebuild,
  emacs-vcs-25.0.9999-r1.ebuild:
  Depend on slot 0 of media-libs/tiff. Remove old.

*emacs-vcs-25.0.50_pre20150131 (01 Feb 2015)

  01 Feb 2015; Ulrich Müller <ulm@gentoo.org>
  -emacs-vcs-25.0.50_pre20141031.ebuild, +emacs-vcs-25.0.50_pre20150131.ebuild:
  New snapshot of trunk. Remove old.

  25 Jan 2015; Ulrich Müller <ulm@gentoo.org> metadata.xml:
  Update flag description.

*emacs-vcs-25.0.50_pre20141231 (03 Jan 2015)

  03 Jan 2015; Ulrich Müller <ulm@gentoo.org>
  +emacs-vcs-25.0.50_pre20141231.ebuild:
  New snapshot of trunk.

  29 Dec 2014; Ulrich Müller <ulm@gentoo.org> emacs-vcs-25.0.9999-r1.ebuild:
  Install CONTRIBUTE file.
