@@ -3,26 +3,28 @@ Hash: SHA256
 
 DIST emacs-24.4-patches-4.tar.xz 4652 SHA256 8b97fe775ed120df42e6f3afbe3ce503c0fedd8957caa759649323ac340f2922 SHA512 b8f8aea92472b5c074fc4cb2198b329e7b0496a70ba04d76eea4f420e398f3882b89d848020750659f60828217ea3155f4d53078edc8dc715b2946b8a239157a WHIRLPOOL e5e92ce3fba0e62ba3135e89ab8de9b6196f9a342048dbe679e06c3530a305311a1b300b72abdee50416d989cb55ca053ea1e0b259e63cc56260bfd58d43894a
 DIST emacs-24.4.90.tar.xz 39752368 SHA256 cec2204ec0134dfac9987dde3aff95e4a02538d4ce63e8d7c55b6a409aa04b36 SHA512 c7fe2ab40b1a28a97342753afb7fd5c24751ad51a144c723c6c1be517b81006b4641f1f4e833b8424ac00107992934f4e4520dd7aa92074e44ab98a148a17eed WHIRLPOOL b20c133381617f15ee2babca36164a104f18da0f38ae310db4cbc539fa988832a4b7d78acc0e023e4b8c92a877decbce44d45028c8b8ecee708c092dfe27e39d
+DIST emacs-24.4.91.tar.xz 39755240 SHA256 497631aafc470ba4b4c1a9f407319a3144d8dc11eb24b7b755a66d9f1f3b5add SHA512 2c885297591992583a6263babcb167563af0a6c1d0920d2e4b3fc9caa9888a55d9394e92f25bec717844a88294f48f9aafb385bba594a2da3ccff48a6bb8d555 WHIRLPOOL 1b7465d07565c636611b606ca84da56ddc9a0865bf5333c5793ebe12462c024a9b889e5f9763230fb37c076633917e99650bf28ed290ca5a26dd28f225d8a0e4
 DIST emacs-25.0.50_pre20150131.tar.xz 24719944 SHA256 fa21415c14d724c6cbd92ea8b76bfbc157757baf1446492b5f72062ff0017076 SHA512 85629851ba93d25050e0590b8c00ea9417e2c6839d306276ec3f02ce4d6bba14fe407f32eb07dcc2d42c79fade0678e9e5c098cf1562831a0a715373629a9d40 WHIRLPOOL e58589ac54577800e971232e814212b2954c93c42d701c137283590833420680968f71b46c6e087c4b3d900f96fb1c99edc6420ffbd336740e9b079e01e9ef4a
 DIST emacs-25.0.50_pre20150228.tar.xz 24749116 SHA256 8e442cbb27e0b39aee9ebcd981512870a7030ecdd4f7941c3ea43dfbb0635635 SHA512 a9f3f3fe5bb2d662c06317c630af40c48b47b33f5cfdbc2a3fa592ac27cb9b9e1c91524326def931b931fc4a35056bac45b7836e24e550088965783dad2c3188 WHIRLPOOL 9349f8f94873a2addc75af295852434a6609bc88f2acb9ef45b24947a8d5f2b058b2e3a0d461eb2ce34816b4895225fdbd939c4ed366608949ca13c354a74185
 EBUILD emacs-vcs-24.4.90-r1.ebuild 11527 SHA256 af9d6a9607e4bce9eddd909ed0ff1fe2a3e274aa55f0daef6600f324b77c53ef SHA512 7ca61abd79446fad970deec4779bcf153c9e10b1f28f5f19156b24913aae6074a507da069d1e997a4b141b2dbf60b0479b3ea47cd7427eb775eb2ac82213c335 WHIRLPOOL a30bd9527d65df834e21739c75b5ca21e387904931d0b6cf444f4e6e2caf5cb44cfa3c04ab73c67369f41a93967614cd0f0e48cafda34b0e945809c724e8db09
+EBUILD emacs-vcs-24.4.91.ebuild 11524 SHA256 cda2e2c3fb34ad2d89725d3bead5bfd35bead98de2fbbdfd07035124709d2ba3 SHA512 a3d19d8aa284e4033bd2a36537d2d8e3847a617b9e090cac4d945cff781332a11bc47896cca01949ec504f46895e9189ede494e697c4ed1189a2c5cc6541734c WHIRLPOOL 3059209b49730871daed9124f55cd05379644d88409f08a16b6d246a7a30b0a69dd8ebb690024c43a5ba487c88613e4729047f063744e978f2e11ea8cc301cfe
 EBUILD emacs-vcs-24.4.9999-r2.ebuild 11456 SHA256 d506a7c926f276a4c1da9b3370b9819e1a98b36c10f1212b68224638c5babb12 SHA512 1e7f6541525d6f794f5f65f2eee3b035b08b664ac2d03ecd80fb09f1bb0399caca4c192fd0396159fe0616548954aa48839daa5dbe0ca212c557fcfe84ae4b9a WHIRLPOOL e6f8a303aad8c2874b795e1ac9510389b9fdcc7b74caf9db803f9c8838b4322573fb67a42f9b972b4dce04eecf1656de429f39a2fb48d78011b530bb833285ef
 EBUILD emacs-vcs-25.0.50_pre20150131.ebuild 11462 SHA256 d694f7c745e4fe0bcbd32a2ed2bcd390493db3c84387ad58ac6d1a0bda3b5c72 SHA512 76bccb3cbf8a1d2339011d4f5a5b973c388c823d2372731ce3d067b904accd645ab8d05f03041cf609c647375544f06afd2405ba62e1193ca008c1207df8e567 WHIRLPOOL 9d4b6581f030958af6d849242d3dcbe5c9f3bab5544c93874a50fff3ba618cffd460a27eec435da16071df167741afd99796694c98b1c34dd0edccc3b3c3f535
 EBUILD emacs-vcs-25.0.50_pre20150228.ebuild 11462 SHA256 a825ead7b98aeab6b375153e5c6358668307a3b08785d03d6f06174302529ac0 SHA512 63ccdb4ce9105d39576e9a649c7eabec3276a74721417fa3236f67d368129c3bcc5acb9ffbdaa8de008ff2aefe914dd187ae2f304ff863386e411bbd26a61b02 WHIRLPOOL fdc0d15de1d63a7f95bc8aba8ac6cfc0475735172bb9e73f51db12239c0d9f4083a39630624d782053d9eb95c45aca840af62ab5f2eba9b2030d848e2e805b63
 EBUILD emacs-vcs-25.0.9999-r1.ebuild 11455 SHA256 9bcc9c4a9a8b6a10e98ec4a86a473ba40d25d33db98e27f1f12d2ec3b0655823 SHA512 9e1b3124fe5d95b96d249ff72153a4f49fc36fda3b846d5498ebe03253227aea2cc84cc46a66427ba3b9e1fd9f465847d47bc541a8aa35b60cfdaeb7c38d4536 WHIRLPOOL 23b7a8fccef2599aac210d6efd970f6d652d414885ab86537414c146298cc77036c0c892202123a64b56835948c40a437db71c402b199725c5dc5e16e74a57a3
-MISC ChangeLog 83826 SHA256 253ce54a77d833e0c265733e4954a2388c65a8d427297914cab9bee5010a4771 SHA512 c241ce0f94488918b4d8a364ee07924f7b3e58540966383fcff3002f46162fda98eecf61200d3f01a68a9251f6ec656162c3bcb56826020e5e4c144f799bb3f9 WHIRLPOOL 8e31d56296a69db57b126d81bae3ff7848e2390a4aa066a5fede3b344f28927f9e09ba9df5ba79ea6e8353a5c898f4743b1b8b002b2dac5195fee5a4c8defe56
+MISC ChangeLog 83958 SHA256 46c388de0af97db42c3ccf3530eda13203eea21ac4e631142005583982e4f83f SHA512 3fbeb635cbb860f7a80b6c0da50b988552914f5b15b122b5d347cd5ff183c22c5645194eeb47ad557cbe55c20a548807e47fec765c415f5ba0bf2ece70a61ada WHIRLPOOL 19566063c3dea9004f82a28846ff5ea356045e2703abbd97246b34043e25c54f02fcfc4d3bf3b53ab00f11823bb7e9390b5ecec907f94511ae9fbb55d9e089c0
 MISC metadata.xml 2489 SHA256 21b3602d37aa25bca31b05ea810b37ee2192f4e53b8f8daeb814d9dca59d03d7 SHA512 4f3d663cd61253ae3390c55c5974dd3cc22dbf1306a823c3cb71794d09eaf28d7727c7e24f66f02dbd8d3845894f3a8cafa5ddaf330c1bbb7f99d8130ece077c WHIRLPOOL bcefdded503fa9cebea943952d3f56847002cb5ddc10f5adbd774301b648d1b12a09da7e493694f9cbbb19e8b53b66132cbd2e0141ded41b226415cfdbbcf8f6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQGcBAEBCAAGBQJU8un2AAoJEJQzkH1pP7W4gZsL/iXs7sgv+BiEHorzfwlWCyy4
-01AqzJEoIY7PmWBCBgrANO0jONEEsOyfUNO/ml43zQiXJu6V8j7/wbxWZzJPA3th
-v/RAwh1Q575BBrqHLH2+dXCFKyhpyna5I3uiZTGSA2mUMuR27+tEzBKNtXMGzLs2
-6lRRxDMDVY/iqhlAH0oVPBqv56RpPjX88nJsv4OFrALcTd3IhxdXMBzDtTAsRokn
-D+5YF6SYGsdgMsYJhRGdJcdiDQ30aAggH7f2eSn1D1nEXlTW5r70vEYYiqQKqp/h
-lUJutTg2qNrG1MlJqERddrVHVN1PPp6p5KKwqg+T8BMVvMZjE9cLdsczZjvZXsRi
-ckJFsPmCoXUs5vaqbkXLanJIdTXtA+XLFlLnJApD3KXcmtuU4RfGxWL0kb/oJjoE
-ANtAn6vahKj8TOeKHVyzCXg/h60QnwMF7piyH50qa+ZuWgu99CGuXylZAkLrOz4B
-6Pb+dZK4JGvPVUy9fxslfyVggX0xDIH/4p7jgdYyYQ==
-=D3Ay
+iQGcBAEBCAAGBQJU/JTCAAoJEJQzkH1pP7W4/M8L+wWj6Z3YpBznJgPUjupbsLGt
+yOCiH5Tx0ShX3LCenXHO3TtSDMYfxrlIxTyuyzfKd2UsWBmO+ywknR6ndV/KDVqQ
+S102zfVnth67vc4TUCrWzjRpBuSB3SrD/3c2tqxV07WPXoiJvIGivFbwbSGRlZEo
+mFpQnpZxPpManqMnyqgfOuxhiezYzUkEUttu1OLJh4gDB+hyjoSdcLOkbEVeiF6C
+N/RC+NyFDs/f4988XI8TKP6edToqA4B0TjFAKbau+zLYcxz9Nh626U8pu/Fgoyay
+Clb5yKJU11DIgx34IHE48B1CRnXLtGz96GnR5hpWlHnullIZmKHVR5ok6/PSkjUK
+keiaSt/dGtO51gen9vBJGAL/rCd+yXqMBjnlOh2A+ppBay7eQKXqamEOyNoEdnLf
+NP/feSg+8ufQFFY8q03WDjDIWLYrFkWBfNdIhPW4bafNVxBpVR2GzSj63zaFOZMj
+ldkUgZs1o9mcddFnTBoAARez9oXDKI8mrgGcAyLpEg==
+=sU3P
 -----END PGP SIGNATURE-----
