@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare
+DEPEND=sys-libs/ncurses >=app-admin/eselect-emacs-1.16 >=app-emacs/emacs-common-gentoo-1.5[games?,X?] net-libs/liblockfile acl? ( virtual/acl ) alsa? ( media-libs/alsa-lib ) dbus? ( sys-apps/dbus ) gfile? ( >=dev-libs/glib-2.28.6 ) gnutls? ( net-libs/gnutls ) gpm? ( sys-libs/gpm ) hesiod? ( net-dns/hesiod ) kerberos? ( virtual/krb5 ) libxml2? ( >=dev-libs/libxml2-2.2.0 ) selinux? ( sys-libs/libselinux ) zlib? ( sys-libs/zlib ) X? ( x11-libs/libXmu x11-libs/libXt x11-misc/xbitmaps gconf? ( >=gnome-base/gconf-2.26.2 ) gsettings? ( >=dev-libs/glib-2.28.6 ) gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg:0= ) png? ( >=media-libs/libpng-1.4:0= ) svg? ( >=gnome-base/librsvg-2.0 ) tiff? ( media-libs/tiff:0 ) xpm? ( x11-libs/libXpm ) imagemagick? ( >=media-gfx/imagemagick-6.6.2 ) xft? ( media-libs/fontconfig media-libs/freetype x11-libs/libXft m17n-lib? ( >=dev-libs/libotf-0.9.4 >=dev-libs/m17n-lib-1.5.1 ) ) gtk? ( gtk3? ( x11-libs/gtk+:3 ) !gtk3? ( x11-libs/gtk+:2 ) ) !gtk? ( motif? ( >=x11-libs/motif-2.3:0 ) !motif? ( Xaw3d? ( x11-libs/libXaw3d ) !Xaw3d? ( athena? ( x11-libs/libXaw ) ) ) ) ) virtual/pkgconfig gzip-el? ( app-arch/gzip ) pax_kernel? ( sys-apps/attr sys-apps/paxctl ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=The extensible, customizable, self-documenting real-time display editor
+EAPI=5
+HOMEPAGE=http://www.gnu.org/software/emacs/
+IUSE=acl alsa aqua athena dbus games gconf gfile gif gnutls gpm gsettings gtk +gtk3 gzip-el hesiod imagemagick +inotify jpeg kerberos libxml2 livecd m17n-lib motif pax_kernel png selinux sound source svg tiff toolkit-scroll-bars wide-int X Xaw3d xft +xpm zlib
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos
+LICENSE=GPL-3+ FDL-1.3+ BSD HPND MIT W3C unicode PSF-2
+RDEPEND=sys-libs/ncurses >=app-admin/eselect-emacs-1.16 >=app-emacs/emacs-common-gentoo-1.5[games?,X?] net-libs/liblockfile acl? ( virtual/acl ) alsa? ( media-libs/alsa-lib ) dbus? ( sys-apps/dbus ) gfile? ( >=dev-libs/glib-2.28.6 ) gnutls? ( net-libs/gnutls ) gpm? ( sys-libs/gpm ) hesiod? ( net-dns/hesiod ) kerberos? ( virtual/krb5 ) libxml2? ( >=dev-libs/libxml2-2.2.0 ) selinux? ( sys-libs/libselinux ) zlib? ( sys-libs/zlib ) X? ( x11-libs/libXmu x11-libs/libXt x11-misc/xbitmaps gconf? ( >=gnome-base/gconf-2.26.2 ) gsettings? ( >=dev-libs/glib-2.28.6 ) gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg:0= ) png? ( >=media-libs/libpng-1.4:0= ) svg? ( >=gnome-base/librsvg-2.0 ) tiff? ( media-libs/tiff:0 ) xpm? ( x11-libs/libXpm ) imagemagick? ( >=media-gfx/imagemagick-6.6.2 ) xft? ( media-libs/fontconfig media-libs/freetype x11-libs/libXft m17n-lib? ( >=dev-libs/libotf-0.9.4 >=dev-libs/m17n-lib-1.5.1 ) ) gtk? ( gtk3? ( x11-libs/gtk+:3 ) !gtk3? ( x11-libs/gtk+:2 ) ) !gtk? ( motif? ( >=x11-libs/motif-2.3:0 ) !motif? ( Xaw3d? ( x11-libs/libXaw3d ) !Xaw3d? ( athena? ( x11-libs/libXaw ) ) ) ) )
+REQUIRED_USE=?? ( aqua X )
+SLOT=24
+SRC_URI=http://dev.gentoo.org/~ulm/distfiles/emacs-24.4.91.tar.xz mirror://gnu-alpha/emacs/pretest/emacs-24.4.91.tar.xz http://dev.gentoo.org/~ulm/emacs/emacs-24.4-patches-4.tar.xz
+_eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	elisp-common	1aa23b3de5dae55456fa2071428eb5bf	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
+_md5_=e2e7081819d7419fc78b029b1272e62a
